refactor(backend): API-shape maintainability fixes (sonar S1640,S1452,S4144 et al)
Applies the B08 batch of Sonar maintainability fixes: EnumMap conversions,
removal of wildcard generic return types, deduplicated identical method
implementations, resolved self-invocation of @Transactional/@Cacheable
methods where safe (and documented as known debt where a real fix would
change transaction/commit-timing behavior), regex simplifications,
Math.clamp adoption, and boxed-Boolean null-safety in conditions.

Investigated all flagged argument-order findings (S2234) and confirmed
they are an intentional comparator-reversal idiom, not bugs; extracted a
named compareByAddedOnDescending() wrapper to remove the false-positive
pattern without changing behavior.